Fixed template variable issue with gerrit_database_mysql.url

--- a/templates/gerrit/gerrit.config.j2
+++ b/templates/gerrit/gerrit.config.j2
@@ -1,12 +1,12 @@
 [gerrit]
-	{% for name, value in gerrit_config.iteritems() -%}
+{% for name, value in gerrit_config.iteritems() %}
 	{{ name }} = {{ value }}
-	{% endfor %}
+{% endfor %}
 
 [database]
   type = {{ gerrit_database_type }}
 {% if gerrit_database_mysql is defined %}
-{% for name, value in gerrit_database_mysql.iteritems() -%}
+{% for name, value in gerrit_database_mysql.iteritems() %}
 {% if name | lower != "password" %}
 	{{ name }} = {{ value }}
 {% endif %}
@@ -21,60 +21,60 @@
 
 {% if gerrit_auth_ldap is defined %}
 [ldap]
-	{% for name, value in gerrit_auth_ldap.iteritems() -%}
+{% for name, value in gerrit_auth_ldap.iteritems() %}
 	{{ name }} = {{ value }}
-	{% endfor %}
+{% endfor %}
 
 {% endif %}
 {% if gerrit_sendemail is defined %}
 [sendemail]
-	{% for name, value in gerrit_sendemail.iteritems() -%}
+{% for name, value in gerrit_sendemail.iteritems() %}
 	{{ name }} = {{ value }}
-	{% endfor %}
+{% endfor %}
 
 {% endif %}
 [container]
-	{% for name, value in gerrit_container.iteritems() -%}
+{% for name, value in gerrit_container.iteritems() %}
 	{{ name }} = {{ value }}
-	{% endfor %}
+{% endfor %}
 
 [sshd]
-	{% for name, value in gerrit_sshd.iteritems() -%}
+{% for name, value in gerrit_sshd.iteritems() %}
 	{{ name }} = {{ value }}
-	{% endfor %}
+{% endfor %}
 
 [httpd]
-	{% for name, value in gerrit_httpd.iteritems() -%}
+{% for name, value in gerrit_httpd.iteritems() %}
 	{{ name }} = {{ value }}
-	{% endfor %}
+{% endfor %}
 
 [cache]
-	{% for name, value in gerrit_cache.iteritems() -%}
+{% for name, value in gerrit_cache.iteritems() %}
 	{{ name }} = {{ value }}
-	{% endfor %}
+{% endfor %}
 
 [receive]
-	{% for name, value in gerrit_receive.iteritems() -%}
+{% for name, value in gerrit_receive.iteritems() %}
 	{{ name }} = {{ value }}
-	{% endfor %}
+{% endfor %}
 
 {% if gerrit_commentlinks is defined %}
-{% for commentlink in gerrit_commentlinks -%}
+{% for commentlink in gerrit_commentlinks %}
 [commentlink "{{ commentlink.id }}"]
-	{% for name, value in commentlink.link.iteritems() -%}
+{% for name, value in commentlink.link.iteritems() %}
 	{{ name }} = {{ value }}
-	{% endfor %}
+{% endfor %}
 
 {% if commentlink.match is defined %}
 [{{ commentlink.id }}]
-	{% for name, value in commentlink.match.iteritems() -%}
+{% for name, value in commentlink.match.iteritems() %}
 	{{ name }} = {{ value }}
-	{% endfor %}
+{% endfor %}
 {% endif %}
 {% endfor %}
 
 {% endif %}
 [plugins]
-	{% for name, value in gerrit_plugins.iteritems() -%}
+{% for name, value in gerrit_plugins.iteritems() %}
 	{{ name }} = {{ value }}
-	{% endfor %}
+{% endfor %}
